clang/test/BSC/Negative/Ownership/RuleCheck/multi-level-pointer/multi-level-pointer.cbs
// RUN: %clang_cc1 -verify %s

void * _Owned VoidPtrOwned();

void write_error_4() {
    void * _Owned c = VoidPtrOwned();
    void * _Owned d = c;
    void * _Owned e = c; // expected-error {{use of moved value: `c`}}
} // expected-error {{memory leak of value: `e`}} expected-error {{memory leak of value: `d`}}

void f4(int * _Owned p) {
    int re1;
    re1 = *p;
    return;
} // expected-error {{memory leak of value: `p`}}

int * _Owned f5(int * _Owned p) {
    int re1;
    re1 = *p;
    return p;
}

int * _Owned * _Owned f6(int * _Owned * _Owned p) {
    int re1;
    re1 = **p;
    return p;
}

void ufree(void * _Owned p);

void f8(int * _Owned * _Owned * _Owned p) {
    int * _Owned * _Owned q;
    q = *p;
    ufree((void * _Owned)p);
} // expected-error {{memory leak of value: `q`}} expected-error {{field memory leak of value: `q`, *q is leak}}

void f9(int * _Owned * _Owned * _Owned p) {
    int * _Owned q = **p;
    ufree((void * _Owned)p); // expected-error {{invalid cast to `void * _Owned` of not all moved value: `p`, *p is _Owned}}
} // expected-error {{memory leak of value: `q`}}